# filternet

./: .codespellignore.txt  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
configs/lorenz/: README.md  base.py  danse.py  knet_arch1.py  knet_arch2.py  siknet.py  sknet.py
configs/nclt_fusion/: README.md  base.py  knet_arch1.py  knet_arch2.py  siknet.py  sknet.py
datasets_tools/datasets_analysis/: box_scale_analysis.py  motion_pattern_analysis.py
datasets_tools/datasets_converts/: mot2track.py
datasets_tools/lorenz_datasets/: README.md  gen_data.py  gen_lorenz.sh  generate_data.py  lorenz_models.py  lorenz_params.py  parameters_opt.py  run_generate_data.sh  ssm_models.py  utils.py
datasets_tools/nclt_fusion/: README.md  down.py  preprocess.py
docs/en/: Datasets.md  Installation.md  Training.md
filternet/: __init__.py  registry.py
filternet/datasets/: __init__.py  base_datamodule.py
filternet/datasets/mot/: base.py  semi_mot_datasets.py
filternet/models/: __init__.py
filternet/models/filter/base/: __init__.py  dynamics_model.py  measurement_model.py
filternet/params/: __init__.py  base_motion_params.py  discretization.py  lorenz_params.py  mot_challenge_params.py
filternet/trainer/: __init__.py  base_trainer.py  common_trainer.py  mot_trainer.py
filternet/utils/: __init__.py  bbox_mode.py  logger.py  misc.py  mot_utils.py
notebook/: nclt_fusion_predict.ipynb
tools/: train.py
